--- a/MODAMSWeb/Areas/Users/Views/Assets/AssetDocuments.cshtml
+++ b/MODAMSWeb/Areas/Users/Views/Assets/AssetDocuments.cshtml
@@ -22,20 +22,20 @@
 <div class="row">
     <div class="col-md-12">
         <div class="card">
-            <div class="card-body p-4  divShadow">
-                <div class="d-flex align-items-center justify-content-between">
-                    <h4 class="m-0">@TempData["assetInfo"]</h4>
-                    <div class="d-sm-flex align-items-center">
-                        <div class="btn-list mx-4">
-                        </div>
-                    </div>
+            <div class="card-header border-bottom bg-info-gradient divShadow d-flex justify-content-between align-items-center">
+                <h4 class="m-0 text-muted text-white">@TempData["assetInfo"]</h4>
+                <div class="btn-group">
+                    <a asp-action="EditAsset" asp-controller="Assets" asp-route-id="@Model.AssetId" class="btn btn-outline-info" data-bs-toggle="tooltip" data-bs-original-title="Edit Asset">
+                        <i class="fa fa-edit"></i>
+                    </a>
+                    <a asp-action="AssetDocuments" asp-controller="Assets" asp-route-id="@Model.AssetId" class="btn btn-warning" data-bs-toggle="tooltip" data-bs-original-title="Asset Documents">
+                        <i class="fa fa-folder"></i>
+                    </a>
+                    <a asp-action="AssetPictures" asp-controller="Assets" asp-route-id="@Model.AssetId" class="btn btn-outline-primary" data-bs-toggle="tooltip" data-bs-original-title="Asset Pictures">
+                        <i class="fa fa-image"></i>
+                    </a>
                 </div>
             </div>
-        </div>
-    </div>
-    <div class="col-md-12">
-        <div class="card">
-
             <div class="card-body project-list-table-container">
                 <div class="row">
                     <div class="col-md-6">
