--- a/MODAMSWeb/Areas/Users/Views/Assets/AssetInfo.cshtml
+++ b/MODAMSWeb/Areas/Users/Views/Assets/AssetInfo.cshtml
@@ -246,7 +246,7 @@
                     <div class="col-xl-3 col-lg-12">
                         <div class="card">
                             <div class="card-header border-bottom">
-                                <h3 class="card-title">Asset History</h3>
+                                <h3 class="card-title text-bold">Asset History</h3>
                             </div>
                             <div class="card-body" style="height:540px;">
                                 <ul class="task-list">
