--- a/MODAMSWeb/Areas/Users/Views/Assets/AssetInfo.cshtml
+++ b/MODAMSWeb/Areas/Users/Views/Assets/AssetInfo.cshtml
@@ -259,7 +259,7 @@
 
                                             <li>
                                                 <i class="task-icon @_func.GetBGColor(nHistoryCounter)"></i>
-                                                <h6>@history.Description</h6>
+                                                <p class="fw-semibold">@history.Description</p>
                                                 <p class="text-muted fs-12">@formattedDate</p>
                                             </li>
                                             if (nHistoryCounter == 5 && historyCount > 5)
