--- a/MODAMSWeb/Areas/Users/Views/Disposals/Index.cshtml
+++ b/MODAMSWeb/Areas/Users/Views/Disposals/Index.cshtml
@@ -32,7 +32,7 @@
             }
         }
         <div class="row">
-            <div class="col-md-8 col-md-8">
+            <div class="col-md-8">
                 <div class="card">
                     <div class="card-status bg-primary br-tr-7 br-tl-7"></div>
                     <div class="card-body project-list-table-container">
@@ -93,7 +93,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-md-4 col-md-4">
+            <div class="col-md-4">
                 <div class="card">
                     <div class="card-status bg-info br-tr-7 br-tl-7"></div>
                     <div id="card-body-file" class="card-body container" style="height: 500px; display: flex; justify-content: center; align-items: center; width: 80%; margin: auto;">
